--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,13 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.6
+  dio: 5.4.1
+  pretty_dio_logger: ^1.3.1
+  get_storage: ^2.1.1
+  intl: ^0.19.0
   flutter: 
     sdk: flutter
+  google_fonts: ^6.2.1
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
@@ -18,4 +23,6 @@ dev_dependencies:
 
 flutter: 
   uses-material-design: true
+  assets:
+    - assets/
 
