--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   get_storage: ^2.1.1
   intl: ^0.19.0
+  curved_labeled_navigation_bar: ^2.0.2
+  carousel_slider: ^4.2.1
+  auto_size_text: ^3.0.0
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
@@ -26,4 +29,5 @@ flutter:
   assets:
     - assets/
     - assets/giff/
+    - assets/image/
 
