--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,23 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   get_storage: ^2.1.1
   intl: ^0.19.0
+  shared_preferences: ^2.2.2
   curved_labeled_navigation_bar: ^2.0.2
   carousel_slider: ^4.2.1
   auto_size_text: ^3.0.0
+  flutter_rating_bar: ^4.0.1
+  flutter_native_splash: ^2.4.0
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
+
+flutter_native_splash:
+  android: true
+  ios: true
+  web: false
+
+  color: "#FFCC00"
+
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
