--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   auto_size_text: ^3.0.0
   flutter_rating_bar: ^4.0.1
   flutter_native_splash: ^2.4.0
+  quickalert: ^1.1.0
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
