--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
+  jwt_decoder: ^2.0.1
 
 flutter_native_splash:
   android: true
