--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   flutter_native_splash: ^2.4.0
   quickalert: ^1.1.0
+  image_picker: ^1.1.0
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
